<resources>
    <string name="app_name">MyFirstCalculatorApp</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Main activity Buttons -->
    <string name="calcActButton">Calculator</string>
    <string name="sliderActButton">Temp Slider</string>
    <string name="addingActButton">Adding up</string>

    <!-- Adding up -->
    <string name="addingMessage">Enter two numbers to sum:</string>

    <!-- Calculator: number and operators-->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="openParenthesis">(</string>
    <string name="closeParenthesis">)</string>
    <string name="addSign">+</string>
    <string name="substSign">-</string>
    <string name="multSign">*</string>
    <string name="divSign">/</string>
    <string name="equalsSign">=</string>
    <string name="clearSign">CE</string>
    <string name="backSpaceSignDesc">Backspace</string>

</resources>
